<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.ryanair.viewModel.RouteViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.RouteFragment">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filters_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.filters.toString()}"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/route_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.route.toString()}" />

    </LinearLayout>

</layout>